/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

repositories {
    mavenCentral()
}

dependencies {
    api libs.org.springframework.boot.spring.boot.starter.web
    api libs.org.springframework.boot.spring.boot.starter.data.jpa
    api libs.org.thymeleaf.thymeleaf
    api libs.org.thymeleaf.thymeleaf.spring5
    api libs.org.springframework.boot.spring.boot.starter.thymeleaf
    api libs.org.hibernate.validator.hibernate.validator
    api libs.com.fasterxml.jackson.datatype.jackson.datatype.jsr310
    api libs.org.springframework.data.spring.data.commons
    api libs.org.springframework.boot.spring.boot.starter.security
    api libs.org.thymeleaf.extras.thymeleaf.extras.springsecurity6
    api libs.org.apache.commons.commons.csv
    api libs.org.springframework.boot.spring.boot.starter.batch
    api libs.org.springframework.batch.spring.batch.core
    api libs.org.springframework.spring.context
    api libs.org.springframework.boot.spring.boot.starter.actuator
    runtimeOnly libs.com.mysql.mysql.connector.j
    testImplementation libs.org.springframework.boot.spring.boot.starter.test
    testImplementation libs.org.springframework.security.spring.security.test
    implementation 'org.springframework.boot:spring-boot-starter'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    // Need to specify lombok as an annotation processor or it doesn't work
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
}

group = 'com.example'
version = '0.0.1'
description = 'spring'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.example.spring.Application'
        )
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}


